--- a/about/index.html
+++ b/about/index.html
@@ -15,15 +15,13 @@
 <meta property="og:locale" content="en" />
 
 <meta property="og:type" content="article">
-<meta name="description" content="这个博客全然当做记事本来用了，本人健忘记录一些自己需要的知识点~~
- ">
+<meta name="description" content="这个博客全然当做记事本来用了，本人健忘记录一些自己需要的知识点~~ ">
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:creator" content="">
 <meta name="twitter:title" content="关于funbox" />
 <meta property="og:url" content="https://ifunbox.top/about/" />
 <meta property="og:title" content="关于funbox" />
-<meta property="og:description" content="这个博客全然当做记事本来用了，本人健忘记录一些自己需要的知识点~~
- " />
+<meta property="og:description" content="这个博客全然当做记事本来用了，本人健忘记录一些自己需要的知识点~~ " />
 <meta property="og:image" content="https://ifunbox.top/" />
 <link rel="apple-touch-icon" sizes="180x180" href='https://ifunbox.top/icons/apple-touch-icon.png'>
 <link rel="icon" type="image/png" sizes="32x32" href='https://ifunbox.top/icons/favicon-32x32.png'>
@@ -162,11 +160,7 @@
 </div>
 
     
-    <p><span style="font-size: large;">    这个博客全然当做记事本来用了，本人健忘记录一些自己需要的知识点~~<span class="Apple-style-span"><br /> </span></span></p>
-
-<p style="padding-left: 30px;">
-  <a href="http://wpa.qq.com/msgrd?v=3&uin=614944530&site=qq&menu=yes" target="_blank"><img title="点击这里给我发消息" src="http://wpa.qq.com/pa?p=2:614944530:50" alt="点击这里给我发消息" border="0" /></a>
-</p>
+    <h1>这个博客全然当做记事本来用了，本人健忘记录一些自己需要的知识点~~</h1>
 
     
       <div id="SOHUCS" sid="/about/" ></div>
